Added length requirement to title in input form

--- a/src/template.html
+++ b/src/template.html
@@ -33,11 +33,11 @@
         </div>
         <button type="button" class="add-clip-board">+ Clip-board</button>
 
-        <div class="modal">
+        <div class="modal clipboard">
             <div class="modal-container" id="clip-board-modal">
                 <form action="" class="clip-board-form">
                     <div class="form-row">
-                        <input type="text" id="title" placeholder="Title" required>
+                        <input type="text" id="title" placeholder="Title"  minlength="1" maxlength="25" required>
                     </div>
                     <div class="form-row buttons">
                         <button type="submit">Submit</button>
