--- a/src/template.html
+++ b/src/template.html
@@ -51,16 +51,16 @@
             <div class="modal-container" id="task-modal">
                 <form action="" class="task-form">
                     <div class="form-row task-title-row">
-                        <input type="text" id="task-title" name="task-title" placeholder="Title"  minlength="1" maxlength="25" required>
+                        <input type="text" id="task-title" name="task-title" placeholder="Title*"  minlength="1" required>
                     </div>
                     <div class="form-row date-priority-row">
                         <div>
-                            <label for="task-date">Due-date:</label>
-                            <input type="date" name="task-date" id="task-date">
+                            <label for="task-date">Due-date:*</label>
+                            <input type="date" name="task-date" id="task-date" required>
                         </div>
                         <div>
-                            <label for="task-priority">Priority:</label>
-                            <select name="task-priority" id="task-priority">
+                            <label for="task-priority">Priority:*</label>
+                            <select name="task-priority" id="task-priority" required>
                                 <option value="low">LO</option>
                                 <option value="medium">MED</option>
                                 <option value="high">HI</option>
